--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,7 +3,7 @@
     "tasks": [
       {
         "label": "Run",
-        "command":"\u007bC:\\processing-3.5.3}processing-java",
+        "command":"C:\\processing-3.5.3\\processing-java.exe",
         "type": "process",
         "args": [
           "--force",
